--- a/7-8_homework/css/media_queries_320.css
+++ b/7-8_homework/css/media_queries_320.css
@@ -9,7 +9,7 @@
 	.menu {
 		visibility: hidden;
 		position: absolute;
-		z-index: 5;
+		z-index: 20;
 	}
 
 	.menu:hover {
@@ -79,6 +79,7 @@
 	.about {
 		display: flex;
 		width: 100%;
+		height: 600px;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
@@ -92,14 +93,49 @@
 		align-items: center;
 	}
 
+	.content__updates a {
+		display: block;
+	}
+
 	.slider__content--about {
 		width: 255px;
 		height: 273px;
 	}
 
 	.content__logo {
-		padding-bottom: 60px;
+		width: 240px;
+		height: 420px;
 		margin: 0 auto;
 	}
-	
+
+	.content__logo1 {
+		margin-right: 55px;
+		margin-top: 52px;
+	}
+
+	.content__logo2 {
+		margin-top: 52px;
+	}
+
+	.content__logo3 {
+		margin-right: 65px;
+		margin-top: 60px;
+	}
+
+	.content__logo4 {
+		margin-top: 60px;
+	}
+
+	.content__logo5 {
+		margin-top: 60px;
+		margin-right: 35px;
+	}
+
+	.content__logo6 {
+		margin-top: 60px;
+	}
+
+	.about__footer {
+		/*display: none;*/
+	}
 }
