--- a/7-8_homework/css/style.css
+++ b/7-8_homework/css/style.css
@@ -8,7 +8,6 @@
          url('../fonts/leaguegothic-italic-webfont.svg#league_gothic_italicregular') format('svg');
     font-weight: normal;
     font-style: italic;
-
 }
 
 /* Italic */
@@ -21,7 +20,6 @@
          url('../fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 /* Condensed */
@@ -34,7 +32,6 @@
          url('../fonts/leaguegothic-condensed-regular-webfont.svg#league_gothic_condensed-Rg') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 /* Condensed Italic */
@@ -50,7 +47,7 @@
 }
 
 body {
-    font-family: 'League Gothic Condensed', Arial, Tahoma, sans-serif;
+    font-family: 'League Gothic', Arial, Tahoma, sans-serif;
 }
 
 header {
@@ -84,13 +81,15 @@ a.header__logo:after {
 	}
 
 .slider {
-	width: 320px;
-	height: 150px;
+	min-width: 320px;
+	max-width: 960px;
+	height: 100%;
 	margin: 0 auto;
-	z-index: 5;
 	display: flex;
 	align-items: center;
 	justify-content: center; 
+	position: relative;
+	z-index: 10;
 }
 
 .slider__arrowleft {
@@ -99,21 +98,27 @@ a.header__logo:after {
 
 .slider a {
 	display: block;
+	position: absolute;
+	left: 0;
+	z-index: 10;
 }
 
 .slider__content {
 	float: left;
 	width: 270px;
-	text-align: center;
+	text-align: left;
+	position: absolute;
+	margin-left: 20px;
+	z-index: 10;
 }
 
-h1 {
+.slider__content h1 {
 	font-size: 36px;
 	color: #fff;
 	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-h2 {
+.slider__content h2 {
 	font-size: 18px;
 	margin-top: 2px;
 	color: #edbfff;
@@ -121,7 +126,10 @@ h2 {
 }
 
 .slider__arrowright {
-	float: left;
+	display: block;
+	position: absolute;
+	right: 0;
+	z-index: 10;
 }
 
 .pagination {
@@ -145,11 +153,13 @@ h2 {
 	border-bottom: 1px solid #1d2f37;
 	background: linear-gradient(to bottom, #765284, #37293e);
 	width: 100%;
+	min-height: 600px;
 }
 
 .about__company {
 	padding-top: 25px;
-	width: 20%
+	width: 20%;
+	height: 132px;
 }
 
 .about__company img {
@@ -162,6 +172,13 @@ h2 {
 .about__company h1 {
 	font-size: 24px;
 	padding-left: 40px;
+	color: #fff;
+}
+
+.about__text {
+	width: 192px;
+	height: 65px;
+	overflow: hidden;
 }
 
 .about__company p {
@@ -169,6 +186,7 @@ h2 {
 	font-size: 16px;
 	color: #fff;
 	padding-left: 40px;
+	overflow: hidden;
 }
 
 .about__company h2 {
@@ -202,6 +220,8 @@ h2 {
 	padding-top: 19px;
 }
 
+
+
 .slider__about>h1 {
 	font-size: 24px;
 	color: #454545;
@@ -232,6 +252,10 @@ h2 {
 .content__updates {
 	min-width: 350px;
 	padding-bottom: 90px;
+}
+
+.content__updates h2 {
+	font-size: 16px;
 }
 
 .sprite {
@@ -276,6 +300,76 @@ h2 {
 	margin-top: 20px;
 	font-size: 18px;
 	color: #454545;
+}
+
+.content__logo {
+	margin: 0 auto;
+}
+
+.content__logo1 {
+	float: left;
+	width: 69px;
+	height: 64px;
+	background: url(../img/logosprite.png) 0 0 no-repeat;
+}
+
+.content__logo2 {
+	float: left;
+	width: 72px;
+	height: 64px;
+	background: url(../img/logosprite.png) -137px 0 no-repeat;
+}
+
+.content__logo3 {
+	float: left;
+	width: 65px;
+	height: 64px;
+	background: url(../img/logosprite.png) -270px 0 no-repeat;
+}
+
+.content__logo4 {
+	float: left;
+	width: 50px;
+	height: 64px;
+	background: url(../img/logosprite.png) -409px 0 no-repeat;
+}
+
+.content__logo5 {
+	float: left;
+	width: 100px;
+	height: 64px;
+	background: url(../img/logosprite.png) -530px 0 no-repeat;
+}
+
+.content__logo6 {
+	float: left;
+	width: 100px;
+	height: 64px;
+	background: url(../img/logosprite.png) -695px 0 no-repeat;
+}
+
+.about__footer {
+	border-top: 1px solid #d8d8d8;
+}
+
+footer {
+	margin: 0 auto;
+	background: url(../img/bgfooter320.png) bottom center no-repeat;
+	background-size: cover;
+}
+
+.design {
+	font-family: "Open Sans", Tahoma, Arial, sans-serif;
+	font-size: 12px;
+	color: #fff;
+	width: 140px;
+	margin: 0 auto;
+	padding: 40px 0 85px;
+}
+
+.pingbull {
+	color: #fff;
+	font-weight: bold;
 }
 
 	
