--- a/JS_3-4_HW/style.css
+++ b/JS_3-4_HW/style.css
@@ -1,5 +1,11 @@
 div {
-	width: 160px;
+	width: 150px;
 	margin-left: 20px;
+}
+
+button {
+	margin: 40px auto;
+	width: 250px;
+	height: 35px;
 }
 
