--- a/7-8_homework/css/style.css
+++ b/7-8_homework/css/style.css
@@ -1,383 +1,469 @@
-
-@font-face {
-    font-family: 'League Gothic';
-    src: url('../fonts/leaguegothic-italic-webfont.eot');
-    src: url('../fonts/leaguegothic-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/leaguegothic-italic-webfont.woff') format('woff'),
-         url('../fonts/leaguegothic-italic-webfont.ttf') format('truetype'),
-         url('../fonts/leaguegothic-italic-webfont.svg#league_gothic_italicregular') format('svg');
-    font-weight: normal;
-    font-style: italic;
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-/* Italic */
-@font-face {
-    font-family: 'League Gothic';
-    src: url('../fonts/leaguegothic-regular-webfont.eot');
-    src: url('../fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/leaguegothic-regular-webfont.woff') format('woff'),
-         url('../fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
-         url('../fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+  }
+  /*our stiles*/
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+ }
+.container--wide {
+ 	max-width: 1600px;
+ 	padding-top: 93px;
+ 	clear: both;
 }
-
-/* Condensed */
-@font-face {
-    font-family: 'League Gothic Condensed';
-    src: url('../fonts/leaguegothic-condensed-regular-webfont.eot');
-    src: url('../fonts/leaguegothic-condensed-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/leaguegothic-condensed-regular-webfont.woff') format('woff'),
-         url('../fonts/leaguegothic-condensed-regular-webfont.ttf') format('truetype'),
-         url('../fonts/leaguegothic-condensed-regular-webfont.svg#league_gothic_condensed-Rg') format('svg');
-    font-weight: normal;
-    font-style: normal;
+.row {
+  margin-right: -5px;
 }
-
-/* Condensed Italic */
-@font-face {
-    font-family: 'League Gothic Condensed';
-    src: url('../fonts/leaguegothic-condensed-italic-webfont.eot');
-    src: url('../fonts/leaguegothic-condensed-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/leaguegothic-condensed-italic-webfont.woff') format('woff'),
-         url('../fonts/leaguegothic-condensed-italic-webfont.ttf') format('truetype'),
-         url('../fonts/leaguegothic-condensed-italic-webfont.svg#league_gothic_condensed_itaRg') format('svg');
-    font-weight: normal;
-    font-style: italic;
+.clearfix:before {
+	content: " ";
+	display: block;
+	clear: both;
 }
-
-body {
-    font-family: 'League Gothic', Arial, Tahoma, sans-serif;
+a {
+ 	transition: all 0.2s ease;
 }
-
-header {
-	height: 547px;
+.sprite {
+	background: url(../img/sprite.png) no-repeat 0 0;
+	position: absolute;
+}
+ body {
+ 	font-family: "LeagueGothicRegular", Arial, sans-serif;
+ }
+ /*header*/
+.header {
+	position: relative;
 	width: 100%;
-	height: 15%;
+	height: 846px;
+	background: url(../img/header.jpg) top center no-repeat;
 }
-
-.header__wrapper {
-	margin: 0 auto;
-	background: url(../img/bgheader.png) 0 0 no-repeat;
-	background-size: cover;
-	height: auto;
-	position: relative;
-}
-
-.header__logoconteiner {
-	width: 152px;
-	padding-top: 70px;
-	margin: 0 auto;
-}
-
 .header__logo {
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-	font-size: 35px;
-	color: #fff;	
-	}
-
-a.header__logo:after {
-	content: "ER";
-	background: linear-gradient(to bottom, #734f82, #34263b);
-	-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;
-	}
-
-.slider {
-	height: 100%;
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-	justify-content: center; 
-	position: relative;
-	z-index: 10;
-}
-
-.slider__arrowleft {
-	float: left;
-}
-
-.slider a {
-	display: block;
 	position: absolute;
+	top: 70px;
 	left: 0;
-	z-index: 10;
 }
-
-.slider__content {
-	float: left;
-	width: 270px;
-	text-align: left;
+.slider-decoration-line {
+	width: 100%;
+	height: 400px;
+	background-color: #000;
+	opacity: 0.2;
+	filter: alpha(Opacity=20);
 	position: absolute;
-	margin-left: 20px;
-	z-index: 10;
+	top: 278px;
+	left: 0;
 }
-
-.slider__content h1 {
-	font-size: 36px;
+/*menu*/
+.menu {
+	float: right;
+	margin: 74px 0 20px 155px;
+}
+.menu__item {
+	display: inline-block;
+	margin-right: 50px;
+}
+.menu__link {
 	color: #fff;
-	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	font-size: 24px;
+	text-transform: uppercase;
+	text-decoration: none;
+	border-bottom: 2px solid transparent;
+	text-shadow: 1px 1.7px 2px rgba(0, 0, 0, 0.4);
 }
-
-.slider__content h2 {
-	font-size: 18px;
-	margin-top: 2px;
+.menu__link:hover {
+	border-bottom: 2px solid #edbfff;
+}
+.menu__item--last {
+	margin-right: 0;
+}
+/*slider*/
+.slider {
+	height: 577px;
+	/*margin-top: 93px;*/
+}
+.slider__item {
+	position: relative;
+	height: 434px;
+	max-width: 960px;
+	margin: 0 auto;
+}
+.slider__description {
+	width: 518px;
+	margin-top: 50px;
+}
+.slider__title {
+	color: #fff;
+	font-size: 60px;
+	letter-spacing: -0.5px;
+	padding-top: 95px;
+}
+.slider__subtitle {
 	color: #edbfff;
+	font-size: 32px;
 	text-transform: uppercase;
 }
-
-.slider__arrowright {
-	display: block;
+.slider__paragraph {
+	padding-top: 7px;
+	line-height: 23px;
+	color: #fff;
+	font-size: 18px;
+	letter-spacing: -0.05px;
+	font-family: "OpenSansLight", Arial, sans-serif;
+}
+.slider__img {
+	width: 274px;
+	height: 434px;
 	position: absolute;
+	top: 0;
+	right: 70px;
+}
+/*owl-carousel-style edit*/
+.header .owl-nav div {
+	width: 30px;
+	height: 42px;
+	background-image: url(../img/sprite.png);
+	position: absolute;
+	top: 189px;
+}
+.header .owl-prev {
+	background-position: 0 0;
+	left: 0;
+}
+.header .owl-next {
+	background-position: 0 -52px;
 	right: 0;
-	z-index: 10;
 }
-
-.pagination {
-	width: 90px;
+.header .owl-dots {
+	width: 624px;
 	margin: 0 auto;
-	padding-top: 37px;
-	padding-bottom: 100px; 
+	text-align: right;
+	margin-top: 75px;
 }
-
-.pagination__slide {
-	width: 16px;
-	height: 16px;
-	border-radius: 8px;
-	background-color: #65606b;
-	float: left;
-	margin-left: 5px;
+.header .owl-dot {
+	width: 17px;
+	height: 17px;
+	background-color: #000;
+	display: inline-block;
+	border-radius: 100%;
+	opacity: 0.3;
+	margin-left: 3px;
 }
-
-.wrapper-about {
+.header .owl-dot.active {
+	background: #37373d url(../img/sprite.png) no-repeat 0 0;
+	background-position: -1px -105px;
+	opacity: 1;
+}
+/*section about*/
+.text-shadow-black {
+	text-shadow: 0.5px 0.9px 0 #0f1518;
+}
+.about {
+	color: #fff;
+	height: 342px;
 	border-top: 1px solid #33253a;
-	border-bottom: 1px solid #1d2f37;
-	background: linear-gradient(to bottom, #765284, #37293e);
-	width: 100%;
-	min-height: 600px;
-}
+	border-bottom: 1px solid #fff;
+	background: #745083;
+background: -moz-linear-gradient(top,  #745083 0%, #33263a 100%);
+background: -webkit-linear-gradient(top,  #745083 0%,#33263a 100%);
+background: linear-gradient(to bottom,  #745083 0%,#33263a 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#745083', endColorstr='#33263a',GradientType=0 );
 
-.about__company {
-	width: 20%;
-	height: 132px;
 }
-
-.about__company img {
-	display: block;
+.about__item {
+	width: 29%;
+	padding-left: 54px;
+	position: relative;
+	margin-top: 76px;
+	margin-left: 6%;
 	float: left;
-	width: 23px;
 }
-
-.about__company h1 {
-	font-size: 24px;
-	padding-left: 40px;
-	color: #fff;
+.about__item--first {
+	margin-left: 1%;
 }
-
-.about__text {
-	width: 192px;
-	height: 65px;
-	overflow: hidden;
+.about__title {
+	font-size: 30px;
+	text-transform: uppercase;
+	margin-bottom: 9px;
 }
-
-.about__company p {
-	font-family: "Open Sans", Tahoma, Arial, sans-serif;
+.about__paragraph {
 	font-size: 16px;
-	color: #fff;
-	padding-left: 40px;
-	overflow: hidden;
+	font-family: "OpenSansLight", Arial, sans-serif;
+	line-height: 24px;
+	letter-spacing: -0.1px;
+	margin-bottom: 19px;
 }
-
-.about__company h2 {
+.about__link-wrap {
 	text-align: right;
+	margin-right: 5px;
+}
+.about__link {
 	font-size: 18px;
 	color: #fff;
-	padding-top: 20px;
+	text-decoration: none;
+	text-transform: uppercase;
 }
-
-.about__company a:hover {
-	text-shadow:  1px 1px 1px rgba(255, 255, 255, 0.8);
+.about__link:hover {
+	text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
 }
-
-.content {
-	display: flex;
-	background-color: #f9f9f9;
+.about__icon--first {
+	width: 30px;
+	height: 31px;
+	background-position: 0 -156px;
+	top: 5px;
+	left: 0;
+}
+.about__icon--second {
+	width: 33px;
+	height: 29px;
+	background-position: 0 -238px;
+	top: 5px;
+	left: 0;
+}
+.about__icon--third {
+	width: 29px;
+	height: 31px;
+	background-position: 0 -197px;
+	top: 5px;
+	left: 0;
+}
+/*section updates*/
+.text-shadow-white {
+	text-shadow: 0.5px 0.9px 0 #fff;
+}
+.updates {
+	height: 485px;
+	padding-top: 100px;
 	border-bottom: 1px solid #e6e6e6;
+	background: #f9f9f9 url(../img/about-shadow.png) no-repeat top center;
 }
-
-.slider__content--about {
+.updates .slider--updates {
+	width: 46.66666667%;
+	height: 415px;
+	float: left;
+}
+.slider__item--updates {
+	width: 450px;
+	/*width: 100%;*/
+	padding-left: 25px;
+}
+.slider__description--updates {
 	background-color: #fff;
-	border: 1px solid #f6f6f6;
-	margin-top: 70px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+	/*width: 421px;*/
+	width: 100%;
+	/*height: 272px;*/
+	padding: 29px 30px 29px 38px;
+	margin: 0;
+	position: relative;
 }
-
-.slider__content--img {
-	float: left;
-	width: 47px;
-	height: 47px;
-	margin-left: -24px;
-	padding-top: 19px;
+.slider__description--updates:after {
+	content: "";
+	width: 20px;
+	height: 20px;
+	background-image: url(../img/corner.png);
+	position: absolute;
+	bottom: -20px;
+	right: 38px;
 }
-
-
-
-.slider__about>h1 {
-	font-size: 24px;
+.slider__subtitle--update {
+	font-size: 30px;
+}
+.updates__sub-span {
+	letter-spacing: -0.75px;
+}
+.updates__span {
 	color: #454545;
-	text-align: left;
-	padding: 27px 0 6px 35px;
+	letter-spacing: -0.75px;
 }
-
-.slider__about>a {
-	display: block;
-	font-size: 24px;
-	color: #edbfff;
-	text-align: left;
-	padding-left: 35px;
-}
-
-.slider__about>p {
-	font-family: "Open Sans", Tahoma, Arial, sans-serif;
+.slider__paragraph--updates {
+	color: #454545;
 	font-size: 16px;
-	text-align: left;
-	padding: 14px 0 33px 35px;
-	color: #454545;
+	line-height: 24px;
 }
-
-.pagination__content {
-	margin-top: 23px;
+.slider__img--updates {
+	width: 49px;
+	height: 51px;
+	position: absolute;
+	left: 0;
+	top: 18px;
 }
-
-.content__updates {
-	min-width: 320px;
-	padding-bottom: 90px;
+/*owl*/
+.updates .owl-dots {
+	width: 100%;
+	position: absolute;
+	bottom: 100px;
+	left: 196px;
 }
-
-.content__updates h2 {
-	font-size: 16px;
+.updates .owl-dot {
+	width: 17px;
+	height: 17px;
+	background-color: #fff;
+	display: inline-block;
+	border-radius: 100%;
+	opacity: 0.9;
+	border: 1px solid #e7e7e7;
+	margin-left: 3px;
 }
-
-.sprite {
+.updates .owl-dot.active {
+	background: #fff url(../img/sprite.png) no-repeat 0 0;
+	background-position: 1px -132px;
+	opacity: 1;
+}
+/*recent*/
+.recent {
+	width: 46.66666667%;
+	margin-left: 6.66666667%;
+	height: 295px;
 	float: left;
-	width: 47px;
-	height: 47px;
-	border-radius: 47px;
-	margin-top: 22px;
-	margin-right: 18px;
-}
-
-.content__updates h1 {
+	padding-top: 30px;
 	color: #454545;
 }
-.one {
-	background: url(../img/pic320.png) 0 0;
+.recent__h2 {
+	margin-bottom: 17px;
 }
-
-.two {
-	background: url(../img/pic320.png) -47px 0 no-repeat;
+.recent__item {
+	position: relative;
+	padding-left: 67px;
+	margin-bottom: 26px;
 }
-
-.three {
-	background: url(../img/pic320.png) 0 -47px no-repeat;
+.recent__wrap-img {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+	position: absolute;
+	top: -5px;
+	left: 0;
 }
-
-.updates h2 {
-	padding-top: 27px;
-	padding-bottom: 12px;
-	font-family: "Open Sans", Tahoma, Arial, sans-serif;
-	text-transform: none;
-	color: #454545;
+.recent__img {
+	border-radius: 50%;
 }
-
-.updates p {
-	font-family: "Open Sans", Tahoma, Arial, sans-serif;
+.recent__title {
+	font-size: 16px;
+	font-family: "OpenSansExtrabold", Arial, sans-serif;
+	margin-bottom: 8px;
 }
-
-.more {
-	display: block;
+.recent__paragraph {
+	font-size: 16px;
+	font-family: "OpenSansLight", Arial, sans-serif;
+	letter-spacing: -0.1px;
+}
+.recent__link-wrap {
 	text-align: right;
-	margin-top: 20px;
+}
+.recent__link {
+	text-transform: uppercase;
 	font-size: 18px;
 	color: #454545;
+	text-decoration: none;
+	margin-right: 20px;
 }
-
-.content__logo {
-	margin: 0 auto;
+.recent__link:hover {
+	text-decoration: underline;
 }
-
-.content__logo1 {
-	float: left;
-	width: 69px;
-	height: 64px;
-	background: url(../img/logosprite.png) 0 0 no-repeat;
+/*section sponsors*/
+.sponsors {
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	height: 122px;
+	background-color: #f9f9f9;
+	text-align: center;
+	padding-top: 25px;
 }
-
-.content__logo2 {
-	float: left;
-	width: 72px;
-	height: 64px;
-	background: url(../img/logosprite.png) -137px 0 no-repeat;
+.sponsors__link {
+	text-decoration: none;
+	display: inline-block;
+	width: 14.66666667%;
 }
-
-.content__logo3 {
-	float: left;
-	width: 65px;
-	height: 64px;
-	background: url(../img/logosprite.png) -270px 0 no-repeat;
+.sponsors__link:hover {
+	opacity: 0.5;
 }
-
-.content__logo4 {
-	float: left;
-	width: 50px;
-	height: 64px;
-	background: url(../img/logosprite.png) -409px 0 no-repeat;
-}
-
-.content__logo5 {
-	float: left;
-	width: 100px;
-	height: 64px;
-	background: url(../img/logosprite.png) -530px 0 no-repeat;
-}
-
-.content__logo6 {
-	float: left;
-	width: 100px;
-	height: 64px;
-	background: url(../img/logosprite.png) -695px 0 no-repeat;
-}
-
-.about__footer {
+/*section comments*/
+.colums {
+	height: 396px;
+	background-color: #ececec;
+	padding-top: 96px;
 	border-top: 1px solid #d8d8d8;
 }
-
-footer {
-	margin: 0 auto;
-	background: url(../img/bgfooter320.png) bottom center no-repeat;
+.colums__copyright,
+.colums__comments,
+.colums__news {
+  width: 33.33333333%;
+  float: left;
+  padding-right: 35px;
 }
-
-.design {
-	font-family: "Open Sans", Tahoma, Arial, sans-serif;
+.colums__comments {
+	padding-left: 17px;
+	padding-right: 18px;
+}
+.colums__news {
+	padding-left: 35px;
+	padding-right: 5px;
+}
+.colums__logo {
+	width: 133px;
+	height: 37px;
+}
+.colums__copy {
+	font-size: 16px;
+	font-family: Georgia, serif;
+	font-style: italic;
+	color: #c5c5c5;
+	margin-top: 20px;
+	margin-bottom: 12px;
+	letter-spacing: -0.1px;
+}
+.colums__paragraph {
+	color: #787878;
+	font-size: 16px;
+	font-family: "OpenSansLight", Arial, sans-serif;
+	margin-top: 10px;
+	letter-spacing: -0.1px;
+	line-height: 23px;
+}
+.colums__title {
+	font-size: 30px;
+	text-transform: uppercase;
+	letter-spacing: -0.1px;
+}
+/*footer*/
+.footer {
+	height: 114px;
+	background-color: #616370;
+	background: url(../img/about-shadow.png) top center no-repeat,
+							url(../img/footer_.jpg) top center no-repeat;
+}
+.menu--footer {
+	float: left;
+	margin: 0;
+	margin-top: 47px;
+	width: 70%;
+}
+.menu__item--footer {
+	margin-right: 41px;
+}
+.menu__link--footer {
+	font-size: 20px;
+}
+.menu__link--footer:hover {
+	text-decoration: underline;
+}
+.footer__author {
+	float: right;
+	color: #fff;
 	font-size: 12px;
-	color: #fff;
-	width: 140px;
-	margin: 0 auto;
-	padding: 40px 0 85px;
+	margin-top: 54px;
 }
-
-.pingbull {
-	color: #fff;
-	font-weight: bold;
+.footer__title {
+	font-family: "OpenSansLight", Arial, sans-serif;
 }
-
-	
-
-
-
-
-
-
-
-
+.footer__name {
+	font-family: "OpenSansExtruold", Arial ,sans-serif;
+}
