--- a/test/src/sass/style.scss
+++ b/test/src/sass/style.scss
@@ -236,6 +236,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#65bf20', end
   .products {
     width: 25%;
     float: left;
+    text-align: center;
 
     img {
       height: 100%;
