add menu reg and login in big size

--- a/Project/css1/media_queries_320.css
+++ b/Project/css1/media_queries_320.css
@@ -123,9 +123,6 @@ header {
 	height: 40px;
 	background: url("../img/menu-button_white.png") no-repeat 8px 7px;
 }
-/* .nav3 #vasya {
-	background: url("../img/drop-down-arrow.png") no-repeat 8px 7px;
-} */
 
 .dropdown .nav2 #enter,
 .dropdown .nav3 #vasya {
@@ -219,7 +216,8 @@ header {
 }
 
 /* nav1  start*/
-.bold {
+/* .bold */ 
+.nav1 ul>li>a {
 	text-decoration: none;
 	color: #666666;
 	text-transform: uppercase;
@@ -229,6 +227,11 @@ header {
 	padding: 5px 40% 5px 55px;
 	text-align: left;
 }
+
+.nav1 ul>li:first-child {
+	margin-top: 20px;
+}
+
 .pos {
 	margin-top: 20px;
 }
@@ -271,60 +274,6 @@ header {
 	float: none;
 }
 /* nav1 end */
-/* nav2 start */
-.nav2 form {
-	width: 70%;
-	margin:  0 auto;
-	font-size: 12px;
-}
-.nav2 form a {
-	font-size: 12px;
-	display: inline-block;
-	float: right;
-	padding-bottom: 5px;
-}
-.nav2 form input {
-	width: 98%;
-	height: 27px;
-	border: 1px solid #cdcdcd;
-	border-radius: 3px;
-	padding-left: 5px;
-}
-.nav2 form .inf {
-	width: 100%;
-}
-
-.nav2 form .inf p {
-	display: inline-block;
-	font-weight: bold;
-}
-.nav2 form .dec {
-	margin-top: 33px;
-	margin-bottom: 17px;
-}
-
-#remember {
-	width: 12px;
-	height: 12px;
-}
-
-.nav2 form button {
-	width: 72px;
-	height: 28px;
-	border: 1px solid #e68b22;
-	background-color: #f59e34;
-	color: #fff;
-	border-radius: 3px;
-	margin-top: 33px;
-	display: block;
-	float: right;
-	margin-bottom: 40px;
-}
-
-#remember, #remember label {
-	margin-top: 36px;
-}
-/* nav2 end */
 /* nav3  start*/
 .navreg {
 	display: block;
