--- a/Apelsin_test/css/style.css
+++ b/Apelsin_test/css/style.css
@@ -518,29 +518,50 @@ footer {
 
 /* FOOTER end */
 /* POPUP */
-.overlay {
-  background: #000000;
+/* ul {list-style-type:none; margin:50px; padding:0;} */
+/* li {width:230px; height:220px; position:relative; float:left; margin:20px 10px; cursor:pointer;} */
+.day {
+  width: 230px;
+  height: 220px; }
+
+.title {
+  position: absolute;
   bottom: 0;
   left: 0;
-  opacity: 0.30;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1000; }
+  padding: 5px 10px;
+  width: 210px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5); }
 
+/* li .txt {display:none;} */
 #popup {
+  display: none;
   font-size: 13px;
   line-height: 20px;
   position: fixed;
-  background-color: #555555;
+  background-color: #fff;
+  border: 3px solid #ccc;
   width: 400px;
   padding: 40px 20px 20px;
   top: 50%;
   left: 50%;
   margin: -120px 0 0 -211px;
   z-index: 1000;
+  overflow: hidden;
   max-height: 80%;
   overflow: auto; }
+
+#popup .popup_info {
+  display: block; }
+
+/* #popup .title + img {float:left; width:120px; margin:10px 10px 10px 0;} */
+#popup .title {
+  display: block;
+  margin: 0 60px 10px 0 !important;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #CC0001; }
 
 .close {
   cursor: pointer;
@@ -555,22 +576,16 @@ footer {
   overflow: hidden;
   border-radius: 3px; }
 
-.div1 {
-  width: 200px;
-  height: 100px;
-  background-color: red; }
-
-.div2 {
-  width: 200px;
-  height: 100px;
-  background-color: green; }
-
-.div3 {
-  width: 200px;
-  height: 100px;
-  background-color: yellow; }
-
-.txt {
-  display: none; }
+.overlay {
+  display: none;
+  background: #000000;
+  bottom: 0;
+  left: 0;
+  opacity: 0.40;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40); }
 
 /*# sourceMappingURL=style.css.map */
