--- a/Apelsin_test/scss/style.scss
+++ b/Apelsin_test/scss/style.scss
@@ -611,62 +611,15 @@ footer {
 
 
 /* POPUP */
-.overlay {
-	background: #000000;
-	bottom: 0;
-	left: 0;
-	opacity: 0.30;
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 1000;
-}
-#popup {
-	font-size: 13px;
-	line-height: 20px;
-	position: fixed;
-	background-color: $darkgrey;
-	width: 400px;
-	padding: 40px 20px 20px;
-	top: 50%;
-	left: 50%;
-	margin: -120px 0 0 -211px;
-	z-index: 1000;
-	max-height: 80%;
-	overflow: auto;
-}
-.close {
-	cursor: pointer;
-	background: red url("../img/fax.png") 0 0 no-repeat;
-	display: block;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	width: 30px;
-	height: 30px;
-	text-indent: -10000px;
-	overflow: hidden;
-	border-radius: 3px;
-}
+/* ul {list-style-type:none; margin:50px; padding:0;} */
+/* li {width:230px; height:220px; position:relative; float:left; margin:20px 10px; cursor:pointer;} */
+.day {width:230px; height:220px;}
+.title {position:absolute; bottom:0; left:0; padding:5px 10px; width:210px; color:#fff; background-color:rgba(0,0,0,0.5);}
+/* li .txt {display:none;} */
 
-
-
-.div1 {
-	width: 200px;
-	height: 100px;
-	background-color: red;
-}
-.div2 {
-		width: 200px;
-	height: 100px;
-	background-color: green;
-}
-.div3 {
-		width: 200px;
-	height: 100px;
-	background-color: yellow;
-}
-
-.txt {
-	display: none;
-}
+#popup {display:none; font-size:13px; line-height:20px; position:fixed;  background-color: #fff; border: 3px solid #ccc;  width:400px; padding:40px 20px 20px; top:50%; left:50%; margin:-120px 0 0 -211px; z-index:1000; overflow:hidden; max-height:80%; overflow:auto;}
+#popup .popup_info {display:block; }
+/* #popup .title + img {float:left; width:120px; margin:10px 10px 10px 0;} */
+#popup .title {display:block; margin:0 60px 10px 0 !important; font-size:16px; font-weight:bold; text-transform:uppercase; color:#CC0001;}
+.close {cursor:pointer; background: red url('../img/fax.png') 0 0 no-repeat; display: block; 	position: absolute; top: 5px; right: 5px; width: 30px; height: 30px; text-indent:-10000px; overflow:hidden; border-radius: 3px;}
+.overlay {display:none; background: #000000; bottom: 0; left: 0; opacity: 0.40;  position: fixed; right: 0; top: 0; z-index: 1000;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=40);}
