--- a/Apelsin_test/css/style.css
+++ b/Apelsin_test/css/style.css
@@ -62,6 +62,7 @@ table {
   font-style: normal; }
 body {
   width: 100%;
+  margin: 0 auto;
   position: relative; }
 
 .telbtn {
@@ -100,7 +101,7 @@ body {
 
 .wrap {
   width: 100%;
-  background: url("../img/bkg1.png"), no-repeat; }
+  background-image: url("../img/bkg1.png"); }
 
 /* MENU start*/
 .wrapper-section1 {
@@ -349,9 +350,11 @@ menu {
 
 .wrapper-section3 {
   width: 100%;
+  height: 1760px;
   background: url("../img/bkg2.png") 0 0 no-repeat;
-  background-size: cover;
-  height: 1760px; }
+  background-position: center center;
+  /* background-attachment: fixed;  - ╤Д╨╕╨║╤Б╨╕╤А╤Г╨╡╤В╤Б╤П ╨╜╨░ ╨╝╨╡╤Б╤В╨╡*/
+  background-size: cover; }
   .wrapper-section3 .dash {
     width: 1px;
     height: 30px;
